--- a/WebContent/notice/write.html
+++ b/WebContent/notice/write.html
@@ -68,6 +68,7 @@ function checkValid() {
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
+					<li><a href="../BoardServlet/boardallview"><span class="icon solid fa-home">자유 게시판</span></a></li>
 					<li><a href="../NoticeServlet/noticeallview"><span class="icon solid fa-home">공지사항</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 					<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
