--- a/WebContent/notice/write.html
+++ b/WebContent/notice/write.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>cart.jsp</title>
-<title>Prologue by HTML5 UP</title>
+
+<title>notice write</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <meta charset="utf-8" />
@@ -17,41 +17,19 @@
 
 
 
-</head>
-
-
-<!-- <SCRIPT language=javascript>
-function checkValid() {
-    var f = window.document.writeForm;
-		
-	if ( f.customerId.value == "") {
-	    alert( "아이디를 입력해 주세요." );
-		return false;
-    }
-
-	if ( f.title.value == "" ) {
-		alert( "제목을 입력해 주세요." );
-		return false;
-	}
-	if ( f.password.value == "" ) {
-        alert( "비밀번호를 입력해 주세요" );
-        return false;
-    }
-	if ( f.content.value == "" ) {
-        alert( "글 내용을 입력해 주세요." );
-        return false;
-    }
-    return true;
-}
-</SCRIPT> -->
+</head>	
 <body class="is-preload">
-	<div class="header1" style="box-sizing: border-box;">
-<!-- 	<div align="right">
-	<br><br>
-	<i class='far fa-file-alt' style='font-size:30px;color:black' />&nbsp;&nbsp;&nbsp;
-	</div> -->
-		<h1>header</h1>
-	</div>
+<div class="header1"  style="box-sizing: border-box;" >
+<div align="center">
+<span>
+<img src="../images/logo.png" style="width:130px; height:130px;" align="center">
+</span>
+<div align="right">
+  <a href="${pageContext.request.contextPath}/company/logout">Logout</a>
+</div>
+</div>
+
+ </div>
 	<!-- Header -->
 	<div id="header2">
 
@@ -69,10 +47,9 @@ function checkValid() {
 			<nav id="nav">
 				<ul>
 					<li><a href="../BoardServlet/boardallview"><span class="icon solid fa-home">자유 게시판</span></a></li>
-					<li><a href="../NoticeServlet/noticeallview"><span class="icon solid fa-home">공지사항</span></a></li>
-					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-					<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+					<li><a href="../search/SearchServlet/allView" id="portfolio-link"><span class="icon solid fa-th">사원조회</span></a></li>
+					<li><a href="../message/list" id="portfolio-link"><span class="icon solid fa-envelope">메시지</span></a></li>
+					<li><a href="../todolist/allview" id="portfolio-link"><span class="icon solid fa-envelope">Todolist</span></a></li>
 				</ul>
 			</nav>
 
@@ -98,10 +75,9 @@ function checkValid() {
 	</div>
 	<!-- Main -->
 	<br><br>
-	<div id="main">
+	<div id="main" align="center">
 	
 
-<!-- <form name="writeForm" method="post" onSubmit='return checkValid()'> -->
  <form action="../NoticeServlet/noticeinsert" method="post">
 
 
@@ -112,14 +88,6 @@ function checkValid() {
             <p align="center"><font color="white" size="3"><b>공지 작성</b></font></p>
         </td>
     </tr>
- <!--    <tr>
-        <td width="150" height="20" >
-            <p align="right"><b><span style="font-size:9pt;">작성자</span></b></p>
-        </td>
-        <td width="450" height="20"><b><span style="font-size:9pt;">
-			
-		</span></b></td>
-    </tr>  -->
     <tr>
         <td width="150" height="20">
             <p align="right"><b><span style="font-size:9pt;">제 목</span></b></p>
@@ -153,7 +121,14 @@ function checkValid() {
 </form>
 </div>
 <hr>
-
+<!-- Scripts -->
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/jquery.scrollex.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
+		<script src="../assets/js/breakpoints.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 
 </body>
 </html>
